# zirgen

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  accel_inp  clang-format.py  environment.yml  license-check.py  rust-toolchain.toml
bazel/rules/clang_format/: BUILD.bazel  wrapper.cc
risc0/circuit/keccak-bootstrap/: Cargo.toml
risc0/circuit/keccak-bootstrap/src/: main.rs
risc0/circuit/rv32im-v2/: Cargo.toml
risc0/circuit/rv32im-v2/src/: lib.rs
zirgen/: BUILD.bazel  lit.cfg
zirgen/Conversions/Typing/: BUILD.bazel  BuiltinComponents.cpp  BuiltinComponents.h  ComponentManager.cpp  ComponentManager.h  ZhlComponent.cpp  ZhlComponent.h
zirgen/Dialect/BigInt/: Overview.md  Precompiles.md
zirgen/Dialect/BigInt/Bytecode/: BUILD.bazel  bibc.cpp  bibc.h  bqint.cpp  bqint.h  decode.cpp  decode.h  encode.cpp  eval.cpp  eval.h  file.cpp  file.h  mlir.cpp  mlir.h
zirgen/Dialect/BigInt/IR/: BUILD.bazel  BigInt.h  Dialect.cpp  Dialect.td  Eval.cpp  Eval.h  (+5 more)
zirgen/Main/: BUILD.bazel  Main.cpp  Main.h  RunTests.cpp  RunTests.h  Target.cpp  Target.h  Utils.cpp  Utils.h  gen_zirgen.cpp
zirgen/Utilities/: BUILD.bazel  DataFlow.h  KeyPath.h
zirgen/bootstrap/: Cargo.toml
zirgen/bootstrap/src/: main.rs
zirgen/circuit/: BUILD.bazel
zirgen/circuit/bigint/: BUILD.bazel  README.md  add128.cpp  add128.h  basic.cpp  basic.h  bibc-exec.cpp  bigint2c.cpp  elliptic_curve.cpp  elliptic_curve.h  field.cpp  field.h  gen_bigint.cpp  op_tests.cpp  op_tests.h  rsa.cpp  rsa.h
zirgen/circuit/circom/: BUILD.bazel  gen_circom.cpp  poseidon2.circom
zirgen/circuit/fib/: BUILD.bazel  Cargo.toml  build.rs  fib.cpp
zirgen/circuit/hello_v3/: BUILD.bazel  CircuitInterface.cpp  CircuitInterface.h  predicates.cpp
zirgen/circuit/keccak/: BUILD.bazel  Cargo.toml  README.md  arr.zir  bits.zir  build.rs  cycle_counter.zir  keccak.zir  one_hot.zir  pack.zir  poseidon2.zir  predicates.cpp  sha2.zir  sha256_for_keccak.zir  sha512.zir  test0k.nop  test0s.nop  test1.zir  test1k.zir  test1s.nop  test2.zir  test2k.zir  test2s.nop  test2s.zir  top.zir
zirgen/circuit/keccak-sys/: Cargo.toml  build.rs
zirgen/circuit/keccak2/: BUILD.bazel  arr.zir  bits.zir  foo.zir  is_zero.zir  keccack.zir  keccak.zir  one_hot.zir  pack.zir  predicates.cpp  sha2.zir  top.zir  xor5.zir
zirgen/circuit/predicates/: BUILD.bazel  gen_predicates.cpp  golden_hashes.txt  golden_hashes_test.sh  predicates.cpp  predicates.h
zirgen/circuit/recursion/: BUILD.bazel  bits.cpp  bits.h  checked_bytes.cpp  checked_bytes.h  code.cpp  code.h  encode.cpp  encode.h  macro.cpp  macro.h  micro.cpp  micro.h  poseidon2.cpp  poseidon2.h  recursion.cpp  sha.cpp  sha.h  top.cpp  top.h  wom.cpp  wom.h
zirgen/circuit/verify/: BUILD.bazel  fri.cpp  fri.h  merkle.cpp  merkle.h  poly.cpp  poly.h  verify.cpp  verify.h  wrap.h  wrap_recursion.cpp  wrap_recursion.h  wrap_rv32im.cpp  wrap_rv32im.h  wrap_zirgen.cpp  wrap_zirgen.h
zirgen/compiler/codegen/: BUILD.bazel  CppLanguageSyntax.cpp  Passes.h  Passes.td  RustLanguageSyntax.cpp  codegen.cpp  codegen.h  gen_cpp.cpp  gen_gpu.cpp  gen_recursion.cpp  gen_rust.cpp  mustache.h  protocol_info_const.h
zirgen/compiler/edsl/: BUILD.bazel  component.cpp  component.h  edsl.cpp  edsl.h  layout.cpp  source_loc.h  test.cpp
zirgen/compiler/layout/: BUILD.bazel  collect.cpp  collect.h  convert.cpp  convert.h  improve.cpp  improve.h  rebuild.cpp  rebuild.h  viz.cpp  viz.h
zirgen/compiler/picus/: BUILD.bazel  picus.cpp  picus.h  test.picus
zirgen/compiler/r1cs/: BUILD.bazel  lower.cpp  lower.h  r1csfile.cpp  r1csfile.h  validate.cpp  validate.h  wtnsfile.cpp  wtnsfile.h
zirgen/compiler/stats/: BUILD.bazel  OpStats.cpp  OpStats.h
zirgen/compiler/tools/: BUILD.bazel  zirgen-opt.cpp  zirgen-r1cs.cpp  zirgen-translate.cpp
zirgen/compiler/zkp/: BUILD.bazel  baby_bear.h  digest.h  hash.cpp  hash.h  poseidon.cpp  poseidon.h  poseidon2.cpp  poseidon2.h  poseidon2_consts.h  poseidon_254.cpp  poseidon_254.h  poseidon_consts.h  read_iop.h  sha256.h  sha_rng.cpp  sha_rng.h  util.cpp  util.h  zkp.h
zirgen/components/: BUILD.bazel  bits.cpp  bits.h  bytes.cpp  bytes.h  fpext.cpp  fpext.h  iszero.cpp  iszero.h  mux.h  onehot.cpp  onehot.h  plonk.cpp  plonk.h  ram.cpp  ram.h  reg.h  u32.cpp  u32.h
zirgen/components/test/: BUILD.bazel  bits.cpp  bytes.cpp  fpext.cpp  mux.cpp  onehot.cpp  plonk.cpp  ram.cpp  reg.cpp  test_runner.cpp  test_runner.h  test_with_bytes.h  u32.cpp
zirgen/docs/: 01_Getting_Started.md  02_Conceptual_Overview.md  03_Building_a_Fibonacci_Circuit.md  04_Components.md  05_Muxes.md  A1_Built-in_Components.md  A1_Builtin_Components.md  README.md  bigint-infra-current.dot  bigint-infra.dot  infra.dot  keccak-infra.dot
zirgen/dsl/: BUILD.bazel  Cargo.toml  ast.cpp  ast.h  driver.cpp  lexer.cpp  lexer.h  lower.cpp  lower.h  parser.cpp  parser.h  stats.cpp  stats.h
zirgen/dsl/Analysis/: LayoutDAGAnalysis.cpp  LayoutDAGAnalysis.h
zirgen/dsl/examples/: BUILD.bazel  Fp.h  calculator.cpp  calculator.cpp.inc  calculator.ir  calculator.rs.inc  calculator.zir  fibonacci.rs.inc  fibonacci.zir
zirgen/dsl/passes/: BUILD.bazel  CommonRewrites.cpp  CommonRewrites.h  ElideTrivialStructs.cpp  EraseUnusedAspects.cpp  FieldDCE.cpp  FlattenCheck.cpp  GenerateAccum.cpp  GenerateCheckLayout.cpp  GenerateGlobals.cpp  GenerateLayout.cpp  GenerateTaps.cpp  InlineForPicus.cpp  InlinePure.cpp  PassDetail.h  Passes.h  Passes.td  SemanticLowering.cpp  TopologicalShuffle.cpp
zirgen/dsl/recognizer/: zirgen.l  zirgen.y
zirgen/dsl/src/: buffers.rs  cpu.rs  lib.rs
zirgen/dsl/test/: alias_layout_hint_1.zir  alias_layout_hint_4.zir  alias_layout_hint_5.zir  args.zir  args2.zir  args3.zir  ast.cpp  back_counter.zir  binary_adder.zir  blocks.zir  edsl-codegen.zir  externs.zir  fibif.zir  generate_layout.cpp  induction_on_arrays.zir  inlining.zir  input1.zir  input2.zir  lower.cpp  mapregs.zir  matrix.zir  parameter_backs.zir  parser.cpp  scalarization.zir  table.zir  test_array.zir  types.cpp  unsatisfiable.zir  use_once_memory.zir  utils.cpp  utils.h
(+714 files in other folders)
