[workspace]
resolver = "2"
members = ["zirgen/circuit/fib", "zirgen/dsl"]

[workspace.dependencies]
risc0-zirgen-dsl = { path = "zirgen/dsl" }
sppark = "0.1.10"

[workspace.dependencies.risc0-core]
git = "https://github.com/risc0/risc0.git"
rev = "17ed98c3243258ad912fd52a289fef6725f17c90"
default-features = false

[workspace.dependencies.risc0-zkp]
git = "https://github.com/risc0/risc0.git"
rev = "17ed98c3243258ad912fd52a289fef6725f17c90"
default-features = false

[profile.bench]
lto = true

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true
