package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "lit_cfg",
    srcs = ["lit.cfg"],
)

filegroup(
    name = "lit_utils",
    testonly = True,
    data = [
        "//zirgen/compiler/tools:zirgen-opt",
        "//zirgen/compiler/tools:zirgen-r1cs",
        "//zirgen/compiler/tools:zirgen-translate",
        "//zirgen/dsl:zirgen",
        "@llvm-project//llvm:FileCheck",
    ],
)
