package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "Utils",
    srcs = [
        "Utils.cpp",
        "Main.cpp",
        "RunTests.cpp",
        "Target.cpp",
    ],
    hdrs = [
        "Utils.h",
        "Main.h",
        "RunTests.h",
        "Target.cpp",
        "Target.h",
    ],
    deps = [
        "//risc0/core",
        "//risc0/fp",
        "//zirgen/Dialect/ZHLT/IR:Codegen",
        "//zirgen/Dialect/ZHLT/Transforms:passes",
        "//zirgen/Dialect/ZStruct/Transforms:passes",
        "//zirgen/Dialect/Zll/Transforms:passes",
        "//zirgen/compiler/codegen",
        "//zirgen/dsl",
        "//zirgen/dsl/passes",
        "@llvm-project//mlir:Debug",
        "@llvm-project//mlir:FuncExtensions",
    ],
)

cc_binary(
    name = "gen_zirgen",
    srcs = ["gen_zirgen.cpp"],
    deps = [
        "//risc0/core",
        "//zirgen/Conversions/Typing",
        "//zirgen/Main:Utils",
        "//zirgen/compiler/layout",
    ],
)
