[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glob = "0.3"
log = "0.4"
regex = "1.11"
threadpool = "1.8"
xz2 = "0.1.6"

# Always optimize; otherwise bootstrap takes excessively long
[profile.dev]
opt-level = 3
