package(
    default_visibility = ["//visibility:public"],
)

filegroup(
    name = "circuit",
    srcs = [
        "//zirgen/circuit/bigint:bigint_zkr",
        "//zirgen/circuit/bigint:gen_bigint",
        "//zirgen/circuit/fib",
        "//zirgen/circuit/keccak",
        "//zirgen/circuit/predicates:keccak_zkr",
        "//zirgen/circuit/predicates:recursion_zkr",
        "//zirgen/circuit/recursion",
        "//zirgen/circuit/rv32im/v1/edsl:rv32im",
        "//zirgen/dsl/examples/calculator",
    ],
)
