[package]
name = "risc0-zirgen-dsl"
description = "RISC Zero zero-knowledge circuit compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = "1.21"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
lazy_static = "1.4"
paste = "1.0"
pretty_assertions = "1.4"
rayon = "1.8"
risc0-core = { workspace = true }
risc0-zkp = { workspace = true, default-features = false, features = ["prove"] }
serial_test = "3.1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
test-log = { version = "0.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[example]]
name = "calculator"
test = true
