load("@bazel_skylib//rules:common_settings.bzl", "string_list_flag")
load("//bazel/rules/clang_format:defs.bzl", "clang_format_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

label_flag(
    name = "config",
    build_setting_default = "//:.clang-format",
)

string_list_flag(
    name = "source_attrs",
    build_setting_default = [
        "srcs",
        "hdrs",
        "textual_hdrs",
    ],
)

string_list_flag(
    name = "extensions",
    build_setting_default = [
        "cpp",
        "h",
    ],
)

cc_binary(
    name = "wrapper",
    srcs = ["wrapper.cc"],
)

clang_format_toolchain(
    name = "toolchain_impl",
    clang_format = "@py3_env//:py3_env/bin/clang-format",
)

toolchain(
    name = "toolchain",
    toolchain = "toolchain_impl",
    toolchain_type = ":toolchain_type",
)
