[package]
name = "risc0-circuit-keccak-bootstrap"
description = "RISC Zero circuit for keccak"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://risczero.com/"

[dependencies]
anyhow = "1.0"
risc0-circuit-keccak = { workspace = true }
risc0-circuit-recursion = { workspace = true }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true, features = ["prove"] }
