load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("//bazel/rules/zirgen:edsl-defs.bzl", "build_circuit")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "lib",
    srcs = [
        "elliptic_curve.cpp",
        "rsa.cpp",
    ],
    hdrs = [
        "elliptic_curve.h",
        "rsa.h",
        "//zirgen/circuit/recursion",
        "//zirgen/circuit/rv32im/v1/edsl:rv32im",
    ],
    deps = [
        "//zirgen/Dialect/BigInt/IR",
        "//zirgen/Dialect/BigInt/Transforms",
        "//zirgen/Dialect/BigInt/Bytecode",
        "//zirgen/circuit/recursion:lib",
        "//zirgen/circuit/verify:lib",
        "//zirgen/compiler/edsl",
    ],
)

cc_binary(
    name = "bibc-exec",
    srcs = ["bibc-exec.cpp"],
    deps = [
        "//zirgen/Dialect/BigInt/IR",
        "//zirgen/Dialect/BigInt/Bytecode",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:MlirOptLib",
    ],
)

cc_binary(
    name = "bigint2c",
    srcs = ["bigint2c.cpp"],
    deps = [
        "//zirgen/circuit/bigint:lib",
        "//zirgen/Dialect/BigInt/Bytecode",
        "//zirgen/Dialect/BigInt/IR",
        "//zirgen/Dialect/BigInt/Transforms",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:MlirOptLib",
    ],
)

BLOBS = [
    "modpow_65537",
    "ec_double",
    "ec_add",
]

genrule(
    name = "modpow_65537",
    outs = ["modpow_65537.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=modpow_65537 > $(OUTS)"
)

genrule(
    name = "ec_double",
    outs = ["ec_double.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=ec_double > $(OUTS)"
)

genrule(
    name = "ec_add",
    outs = ["ec_add.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=ec_add > $(OUTS)"
)

pkg_zip(
    name = "bigint_blob",
    srcs = [x + ".blob" for x in BLOBS],
)

