load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("//bazel/rules/zirgen:edsl-defs.bzl", "build_circuit")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "lib",
    srcs = [
        "elliptic_curve.cpp",
        "field.cpp",
        "rsa.cpp",
    ],
    hdrs = [
        "elliptic_curve.h",
        "field.h",
        "rsa.h",
        "//zirgen/circuit/recursion",
        "//zirgen/circuit/rv32im/v1/edsl:rv32im",
    ],
    deps = [
        "//zirgen/Dialect/BigInt/IR",
        "//zirgen/Dialect/BigInt/Transforms",
        "//zirgen/Dialect/BigInt/Bytecode",
        "//zirgen/circuit/recursion:lib",
        "//zirgen/circuit/verify:lib",
        "//zirgen/compiler/edsl",
    ],
)

cc_binary(
    name = "bibc-exec",
    srcs = ["bibc-exec.cpp"],
    deps = [
        "//zirgen/Dialect/BigInt/IR",
        "//zirgen/Dialect/BigInt/Bytecode",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:MlirOptLib",
    ],
)

cc_binary(
    name = "bigint2c",
    srcs = ["bigint2c.cpp"],
    deps = [
        "//zirgen/circuit/bigint:lib",
        "//zirgen/Dialect/BigInt/Bytecode",
        "//zirgen/Dialect/BigInt/IR",
        "//zirgen/Dialect/BigInt/Transforms",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:MlirOptLib",
    ],
)

BLOBS = [
    "modpow65537_4096",
    "ec_double_256",
    "ec_add_256",
    "extfield_deg2_add_256",
    "extfield_deg2_mul_256",
    "extfield_deg4_mul_256",
    "extfield_deg2_sub_256",
    "extfield_xxone_mul_256",
    "modadd_256",
    "modinv_256",
    "modmul_256",
    "modsub_256",
]

genrule(
    name = "modpow65537_4096",
    outs = ["modpow65537_4096.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=modpow65537 --bitwidth 4096 > $(OUTS)"
)

genrule(
    name = "ec_double_256",
    outs = ["ec_double_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=ec_double --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "ec_add_256",
    outs = ["ec_add_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=ec_add --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "extfield_deg2_add_256",
    outs = ["extfield_deg2_add_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=extfield_deg2_add --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "extfield_deg4_mul_256",
    outs = ["extfield_deg4_mul_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=extfield_deg4_mul --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "extfield_deg2_mul_256",
    outs = ["extfield_deg2_mul_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=extfield_deg2_mul --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "extfield_deg2_sub_256",
    outs = ["extfield_deg2_sub_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=extfield_deg2_sub --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "extfield_xxone_mul_256",
    outs = ["extfield_xxone_mul_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=extfield_xxone_mul --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "modadd_256",
    outs = ["modadd_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=modadd --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "modinv_256",
    outs = ["modinv_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=modinv --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "modmul_256",
    outs = ["modmul_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=modmul --bitwidth 256 > $(OUTS)"
)

genrule(
    name = "modsub_256",
    outs = ["modsub_256.blob"],
    exec_tools = [":bigint2c"],
    cmd = "$(location //zirgen/circuit/bigint:bigint2c) --program=modsub --bitwidth 256 > $(OUTS)"
)

pkg_zip(
    name = "bigint_blob",
    srcs = [x + ".blob" for x in BLOBS],
)

