[package]
name = "risc0-circuit-fib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
risc0-zkp = { workspace = true, features = ["default"] }

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
cc = { version = "1.2", features = ["parallel"] }
glob = "0.3"

[features]
cuda = []
default = []
