load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("//bazel/rules/lit:defs.bzl", "glob_lit_tests")
load("//bazel/rules/zirgen:edsl-defs.bzl", "ZIRGEN_OUTS", "build_circuit")

package(
    default_visibility = ["//visibility:public"],
)

KECCAK_ZIR_FILES = [
    "bits.zir",
    "keccak.zir",
    "one_hot.zir",
    "sha256_for_keccak.zir",
]

glob_lit_tests(
    # TODO: shorten timeout once zirgen is faster
    timeout = "long",
    data = KECCAK_ZIR_FILES,
    exclude = KECCAK_ZIR_FILES,
    test_file_exts = ["zir"],
)

KECCAK_OUTS = [
    "defs.cpp.inc",
    "defs.rs.inc",
    "info.rs",
    "eval_check.cu",
    "eval_check.metal",
    "layout.cpp.inc",
    "layout.rs.inc",
    "poly_ext.rs",
    "rust_poly_fp_0.cpp",
    "rust_poly_fp_1.cpp",
    "rust_poly_fp_2.cpp",
    "rust_poly_fp_3.cpp",
    "rust_poly_fp_4.cpp",
    "taps.cpp",
    "taps.rs",
    "steps.cpp.inc",
    "steps.rs.inc",
    "types.h.inc",
    "types.rs.inc"
]

build_circuit(
    name = "keccak",
    outs = KECCAK_OUTS,
    bin = "//zirgen/Main:gen_zirgen",
    data = KECCAK_ZIR_FILES + ["//zirgen/dsl/examples:calculator.zir", "//zirgen/dsl/test:simple-accum.zir"],
    extra_args = [
        "zirgen/circuit/keccak/keccak.zir",
#        "zirgen/dsl/test/simple-accum.zir",
        "-I",
        "zirgen/circuit/keccak",
        "--mlir-print-debuginfo",
        "--mlir-pretty-debuginfo",
        "--validity-split-count=5",
    ],
)
